--- a/css/index.css
+++ b/css/index.css
@@ -54,6 +54,7 @@ body {
 
 .matter {
   width: var(--allWidth);
+  height: 30px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -64,6 +65,7 @@ body {
   border-bottom-right-radius: 15px;
   background-color: wheat;
   position: relative;
+  box-sizing: border-box;
 }
 .matter > * {
   display: inline-block;
@@ -92,10 +94,12 @@ body {
 .content {
   width: 232px;
   margin: 0;
+  border: 0;
   height: 30px;
   font-size: 18px;
   line-height: 30px;
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
+  background-color: transparent;
 }
